# tenki

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  deny.toml  justfile
.claude/skills/dev/: SKILL.md
.claude/skills/dev/references/: subagent-prompts.md  templates.md
docs/plans/: 2026-03-22-job-ops-alignment.md
examples/: pipeline-demo.sh  pipeline_demo.rs
examples/fake_resume_repo/: Makefile  resume.typ
migrations/: 20260324021604_fix_discovered_stage.down.sql  20260324021604_fix_discovered_stage.up.sql  20260324031418_add_posted_at_to_applications.down.sql  20260324031418_add_posted_at_to_applications.up.sql
src/: app_config.rs  db.rs  error.rs  http.rs  lib.rs  llm.rs  main.rs  paths.rs  schema.sql
src/agent/: backend.rs  config.rs  executor.rs  mod.rs  output.rs
src/cli/: analyze.rs  app.rs  discover.rs  doctor.rs  export.rs  interview.rs  mod.rs  pipeline.rs  resume_export.rs  stage.rs  stats.rs  tailor.rs  task.rs
src/db/: application.rs  interview.rs  mod.rs  stage.rs  stats.rs  status.rs  task.rs
src/domain/: enums.rs  mod.rs  models.rs  params.rs  validation.rs
src/extractor/: mod.rs  opencli.rs  types.rs
src/migrations/: v2.sql  v3.sql
src/pipeline/: mod.rs  steps.rs
src/store/: config.rs  db.rs  err.rs  mod.rs
tests/: cli_analyze.rs  cli_app.rs  cli_discover.rs  cli_export.rs  cli_interview.rs  cli_pipeline.rs  cli_stage.rs  cli_stats.rs  cli_tailor.rs  cli_task.rs  smoke.rs
tests/common/: mod.rs
